--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,23 @@
 [package]
 name = "Gamble_Game_Near"
-version = "0.1.0"
+version = "1.0.0"
+authors = ["young"]
 edition = "2021"
+
+[lib]
+crate-type = ["cdylib","rlib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+uint = {version = "0.9.0", default-features = false}
+near-sdk = "4.0.0-pre.7"
+near-contract-standards = "4.00-pre.7"
+
+[profile.release]
+codegen-units = 1
+opt-level = "z"
+lto = true
+debug = false
+panic = "abort"
+overflow-checks = true
